--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         ul,li {list-style: none;}
         main {padding: 4rem 0;}
         section {padding: 0 7rem;}
-        .intro {display: flex; flex-wrap: wrap; flex-direction: row-reverse; justify-content: space-between; height: 100vh; }
+        .intro {display: flex; flex-wrap: wrap; flex-direction: row-reverse; justify-content: space-between; height: 100vh; padding-bottom: 100px; }
         .topic {display: flex; flex-direction: column; justify-content: space-between; max-width: 1920px; font-family: Noto Serif KR; font-weight: 500;}
         .tit {font-size: 4.5rem; letter-spacing: -8px; word-break: keep-all;}
         .tit b {display: block; font-weight: 600;}
@@ -57,7 +57,7 @@
                 <dl class="row">
                     <dt class="stit">CAREER
                     </dt>
-                    <dd class="value">2013- UI/UX Web Developer
+                    <dd class="value">2013-2023- UI/UX Web Developer
                         <br>
                         얍모바일 얍오더; 사장님사이트; 롯데백화점스마트오더;
                         <br>
